Ready to commit

--- a/public/project.html
+++ b/public/project.html
@@ -28,6 +28,11 @@
                 <a href="https://navneetsn18.github.io/WeatherApp.github.io/" id="check" target="blank">Check it out.</a>
             </div>
             <div class="container">
+                <img src="./img/runlms.png" alt="GU360">
+                <p>Run Lms Chrome Extension</p>
+                <a href="https://github.com/navneetsn18/Lms-Vpl-Execute-Browser-Extension" id="check" target="blank">Check it out.</a>
+            </div>
+            <div class="container">
                 <img src="/img/nzip.PNG" alt="Nzip">
                 <p>Nzip</p>
                 <a href="https://github.com/navneetsn18/Nzip" id="check" target="blank">Check it out.</a>
