Finally its done

--- a/public/about.html
+++ b/public/about.html
@@ -20,9 +20,9 @@
     </div>
     <div class="main">
         <div class="namedetails">
-            <img src="/img/mypic.png" alt="">
+            <img src="/img/mypic.png" alt="Navneet">
             <h3>Navneet Singh Negi</h3>
-            <p id="pad">Student</p>
+            <p id="pad-stu">Student</p>
             <p id="location">New Delhi, India</p>
         </div>
         <div class="personaldetails">
@@ -55,10 +55,10 @@
             <div class="workexp">
                 <h1>Work Experience</h1>
                 <br>
-                <h2 class="course">Splen Technologies</h2>
-                <p class="year">June 2019-July 2019</p>
-                <p id="pad">Internship</p>
-                <p id="cgpa">Technologies : Nodejs</p>
+                <h2 class="course-int">Splen Technologies</h2>
+                <p class="year-int">June 2019-July 2019</p>
+                <p id="pad-int">Internship</p>
+                <p id="cgpa-int">Technologies : Nodejs</p>
             </div>
             <br><br>
             <div class="lang">
@@ -139,7 +139,7 @@
         </div>
         <br><br>
         <div class="proof">
-            <a href="/cv/cv.pdf" id="cv" target="blank">Download CV</a>
+            <a href="/cv/cv.pdf" id="cv" target="blank">Download Resume</a>
             <a href="https://drive.google.com/open?id=1Bvyn4SPkFLVhWYtzF_U-vu7eDCLYX8dB" id="certificate">View Certificates</a>
         </div>
     </div>
