--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -29,16 +29,16 @@
             <a id="learnMore" href="about">Learn More</a>
         </div>
         <div class="container2">
-            <h1>Let's <span id="hovercontent">Connect </span></h1>
+            <h1 id="lets-connect">Let's <span id="hovercontent">Connect </span></h1>
             <div class="codingPanel">
                 <p id="codingText">&gt; <span id="code"></span><span id="cursor">&nbsp;</span></p>
             </div>
             <br>
             <div class="connect">
-                <a href="mailto:navneetsn18@gmail.com" target="blank"><i class="fa fa-envelope" style="font-size:48px;color:#071e3d"></i></a>
-                <a href="https://www.linkedin.com/in/navneet-singh-negi-241166169/" target="blank"><i class="fa fa-linkedin" style="font-size:48px;color:#071e3d"></i></a>
-                <a href="https://github.com/navneetsn18" target="blank"><i class="fa fa-github" style="font-size:48px;color:#071e3d"></i></a>
-                <a href="https://www.instagram.com/navneetsn18/" target="blank"><i class="fa fa-instagram" style="font-size:48px;color:#071e3d"></i></a>
+                <a href="mailto:navneetsn18@gmail.com" target="blank"><i class="fa fa-envelope" style="font-size:48px;color:#071e3d;"></i></a>
+                <a href="https://www.linkedin.com/in/navneet-singh-negi-241166169/" target="blank"><i class="fa fa-linkedin" style="font-size:48px;color:#071e3d;"></i></a>
+                <a href="https://github.com/navneetsn18" target="blank"><i class="fa fa-github" style="font-size:48px;color:#071e3d;"></i></a>
+                <a href="https://www.instagram.com/navneetsn18/" target="blank"><i class="fa fa-instagram" style="font-size:48px;color:#071e3d;"></i></a>
             </div>
         </div>
     </div>
