Finally its done

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>navneetsn18.dev</title>
     <link rel="stylesheet" href="/css/portfolio.css">
+    <link rel="shortcut icon" href="/img/people.png" type="image/x-icon">
 </head>
 
 <body>
