--- a/public/project.html
+++ b/public/project.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>navneetsn18.dev</title>
     <link rel="stylesheet" href="/css/project.css">
+    <link rel="icon" href="demo_icon.gif" type="image/gif" sizes="16x16">
 </head>
 
 <body>
