--- a/public/contact.html
+++ b/public/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>navneetsn18.dev</title>
     <link rel="stylesheet" href="/css/contact.css">
-    <link rel="icon" href="demo_icon.gif" type="image/gif" sizes="16x16">
+    <link rel="shortcut icon" href="/img/people.png" type="image/x-icon">
 </head>
 
 <body>
