--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -25,7 +25,7 @@
             <h1>Hii I'm <span id="hovercontent">Navneet Singh Negi.</span></h1>
             <h1>Nice to meet you!</h1>
             <br>
-            <p>I am a <span id="hovercontent">Full Stack Web Developer</span> with a passion for working on distruptive, life changing projects. </p>
+            <p id="mob-pro">I am a <span id="hovercontent">Full Stack Web Developer</span> with a passion for working on distruptive, life changing projects. </p>
             <br>
             <a id="learnMore" href="about">Learn More</a>
         </div>
