New Projects added

--- a/public/project.html
+++ b/public/project.html
@@ -24,12 +24,12 @@
         <br>
         <div id="projects">
             <div class="container">
-                <img src="./img/Weather.png" alt="Weather App">
+                <img src="/img/Weather.png" alt="Weather App">
                 <p>Weather App</p>
                 <a href="https://navneetsn18.github.io/WeatherApp.github.io/" id="check" target="blank">Check it out.</a>
             </div>
             <div class="container">
-                <img src="./img/runlms.png" alt="GU360">
+                <img src="/img/runlms.png" alt="GU360">
                 <p>Run Lms Chrome Extension</p>
                 <a href="https://github.com/navneetsn18/Lms-Vpl-Execute-Browser-Extension" id="check" target="blank">Check it out.</a>
             </div>
@@ -39,14 +39,29 @@
                 <a href="https://github.com/navneetsn18/Nzip" id="check" target="blank">Check it out.</a>
             </div>
             <div class="container">
-                <img src="./img/gu360.png" alt="GU360">
-                <p>GU360</p>
-                <a href="http://navneetsn18.github.io/gu360.github.io/" id="check" target="blank">Check it out.</a>
+                <img src="/img/internshala.png" alt="Internshala Scrapper">
+                <p>Internshala Scrapper</p>
+                <a href="https://github.com/navneetsn18/Web-Scrapping/blob/master/Internshala%20Scrapper.ipynb" id="check" target="blank">Check it out.</a>
+            </div>
+            <div class="container">
+                <img src="/img/estimatepi.png" alt="Estimate pi">
+                <p>Estimate Pi</p>
+                <a href="https://editor.p5js.org/navneetsn18/sketches/KGTnegOD5" id="check" target="blank">Check it out.</a>
             </div>
             <div class="container">
                 <img src="/img/OCR.png" alt="OCR">
                 <p>OCR</p>
                 <a href="https://github.com/navneetsn18/OCR" id="check" target="blank">Check it out.</a>
+            </div>
+            <div class="container">
+                <img src="/img/gu360.png" alt="GU360">
+                <p>GU360</p>
+                <a href="http://navneetsn18.github.io/gu360.github.io/" id="check" target="blank">Check it out.</a>
+            </div>
+            <div class="container">
+                <img src="/img/bookmyshow.png" alt="Book My Show Scrapping">
+                <p>Book My Show Scrapping</p>
+                <a href="https://github.com/navneetsn18/Web-Scrapping/blob/master/Book%20my%20show.ipynb" id="check" target="blank">Check it out.</a>
             </div>
             <div class="container">
                 <img src="/img/speech.PNG" alt="Speech Recognition">
