--- a/public/about.html
+++ b/public/about.html
@@ -139,7 +139,7 @@
             </div>
             <br><br>
             <div class="proof">
-                <a href="/cv/cv.pdf" id="cv" target="blank">Download Resume</a>
+                <a href="/cv/Navneet-Singh-Negi-Resume.pdf" id="cv" target="blank">Download Resume</a>
                 <a href="https://drive.google.com/open?id=1Bvyn4SPkFLVhWYtzF_U-vu7eDCLYX8dB" id="certificate">View Certificates</a>
             </div>
         </div>
