:rocket: New Updates

--- a/public/project.html
+++ b/public/project.html
@@ -34,6 +34,16 @@
                 <a href="https://github.com/navneetsn18/Lms-Vpl-Execute-Browser-Extension" id="check" target="blank">Check it out.</a>
             </div>
             <div class="container">
+                <img src="/img/SIH 2020.png" alt="SIH 2020">
+                <p>Dyanmic Face Recognition System (SIH2020)</p>
+                <a href="https://github.com/navneetsn18/SIH-Completed-Project" id="check" target="blank">Check it out.</a>
+            </div>
+            <div class="container">
+                <img src="/img/Face.png" alt="Facial Expression Recognition with Keras (Coursera)">
+                <p>Facial Expression Recognition with Keras (Coursera)</p>
+                <a href="https://github.com/navneetsn18/Facial-Expression-Recognition-with-Keras-Coursera" id="check" target="blank">Check it out.</a>
+            </div>
+            <div class="container">
                 <img src="/img/nzip.PNG" alt="Nzip">
                 <p>Nzip</p>
                 <a href="https://github.com/navneetsn18/Nzip" id="check" target="blank">Check it out.</a>
